[gd_scene load_steps=52 format=4 uid="uid://c1f7t8sydd7iu"]

[ext_resource type="Texture2D" uid="uid://klaf70eqaiyc" path="res://water_spitesheet/waterB_spritesheet.png" id="1_j0s4b"]
[ext_resource type="Script" uid="uid://jdoh3itxybnl" path="res://character_body_2d.gd" id="2_7ve8a"]
[ext_resource type="Texture2D" uid="uid://vy3mua1mrm5s" path="res://BlackBG.png" id="3_y1a8n"]
[ext_resource type="Texture2D" uid="uid://d3e24j7f2uaxv" path="res://Eris Esra's Character Template 4.0/16x16/16x16 Idle-Sheet.png" id="4_7p5im"]
[ext_resource type="Texture2D" uid="uid://dd7p5wdvnwlpm" path="res://Eris Esra's Character Template 4.0/16x16/16x16 Run-Sheet.png" id="5_lnfan"]
[ext_resource type="Script" uid="uid://cfsx4aphyqp3u" path="res://boat.gd" id="6_7p5im"]
[ext_resource type="Texture2D" uid="uid://b8y71tjeqko56" path="res://Vessels/boat.png" id="7_lnfan"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7p5im"]
texture = ExtResource("1_j0s4b")
32:8/size_in_atlas = Vector2i(16, 8)
32:8/0 = 0
18:8/size_in_atlas = Vector2i(14, 8)
18:8/0 = 0
32:16/size_in_atlas = Vector2i(16, 7)
32:16/0 = 0
16:16/size_in_atlas = Vector2i(14, 7)
16:16/0 = 0
32:1/size_in_atlas = Vector2i(16, 7)
32:1/0 = 0
18:0/size_in_atlas = Vector2i(14, 7)
18:0/0 = 0
50:1/size_in_atlas = Vector2i(14, 7)
50:1/0 = 0
48:8/size_in_atlas = Vector2i(14, 8)
48:8/0 = 0
48:17/size_in_atlas = Vector2i(14, 7)
48:17/0 = 0
48:25/size_in_atlas = Vector2i(10, 6)
48:25/0 = 0
34:24/size_in_atlas = Vector2i(12, 8)
34:24/0 = 0
23:25/size_in_atlas = Vector2i(9, 7)
23:25/0 = 0
2:16/size_in_atlas = Vector2i(12, 6)
2:16/0 = 0
0:9/size_in_atlas = Vector2i(16, 6)
0:9/0 = 0
2:3/size_in_atlas = Vector2i(12, 5)
2:3/0 = 0

[sub_resource type="TileSet" id="TileSet_lrajl"]
sources/0 = SubResource("TileSetAtlasSource_7p5im")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y4bc0"]
radius = 0.5
height = 1.6

[sub_resource type="LabelSettings" id="LabelSettings_1g4x3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7vxoj"]
atlas = ExtResource("4_7p5im")
region = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei405"]
atlas = ExtResource("4_7p5im")
region = Rect2(20, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8dv2"]
atlas = ExtResource("4_7p5im")
region = Rect2(40, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nhjh"]
atlas = ExtResource("4_7p5im")
region = Rect2(60, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebxd8"]
atlas = ExtResource("4_7p5im")
region = Rect2(0, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u7jv"]
atlas = ExtResource("4_7p5im")
region = Rect2(20, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_24dk6"]
atlas = ExtResource("4_7p5im")
region = Rect2(40, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_mryly"]
atlas = ExtResource("4_7p5im")
region = Rect2(60, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjha6"]
atlas = ExtResource("4_7p5im")
region = Rect2(0, 80, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt76g"]
atlas = ExtResource("4_7p5im")
region = Rect2(20, 80, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fr6y"]
atlas = ExtResource("4_7p5im")
region = Rect2(40, 80, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hxjc"]
atlas = ExtResource("4_7p5im")
region = Rect2(60, 80, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0ka3"]
atlas = ExtResource("5_lnfan")
region = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnnru"]
atlas = ExtResource("5_lnfan")
region = Rect2(20, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_540hr"]
atlas = ExtResource("5_lnfan")
region = Rect2(40, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ip5v"]
atlas = ExtResource("5_lnfan")
region = Rect2(60, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_0h7mo"]
atlas = ExtResource("5_lnfan")
region = Rect2(0, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_nr8wp"]
atlas = ExtResource("5_lnfan")
region = Rect2(20, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2bti"]
atlas = ExtResource("5_lnfan")
region = Rect2(40, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta5nu"]
atlas = ExtResource("5_lnfan")
region = Rect2(60, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_flf07"]
atlas = ExtResource("5_lnfan")
region = Rect2(0, 80, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_k73cj"]
atlas = ExtResource("5_lnfan")
region = Rect2(20, 80, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjqkl"]
atlas = ExtResource("5_lnfan")
region = Rect2(40, 80, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs4d3"]
atlas = ExtResource("5_lnfan")
region = Rect2(60, 80, 20, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_51f1i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vxoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei405")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8dv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nhjh")
}],
"loop": true,
"name": &"idleDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebxd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u7jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24dk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mryly")
}],
"loop": true,
"name": &"idleRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjha6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt76g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fr6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hxjc")
}],
"loop": true,
"name": &"idleUp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0ka3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnnru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_540hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ip5v")
}],
"loop": true,
"name": &"runDown",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"runLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h7mo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nr8wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2bti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta5nu")
}],
"loop": true,
"name": &"runRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_flf07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k73cj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjqkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs4d3")
}],
"loop": true,
"name": &"runUp",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_y4bc0"]
atlas = ExtResource("7_lnfan")
region = Rect2(221, 92, 44, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_ornx7"]
atlas = ExtResource("7_lnfan")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjlbh"]
atlas = ExtResource("7_lnfan")
region = Rect2(288, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbrxf"]
atlas = ExtResource("7_lnfan")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xo8l"]
atlas = ExtResource("7_lnfan")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfyss"]
atlas = ExtResource("7_lnfan")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ngjr"]
atlas = ExtResource("7_lnfan")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qilgh"]
atlas = ExtResource("7_lnfan")
region = Rect2(0, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fshgd"]
atlas = ExtResource("7_lnfan")
region = Rect2(96, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qosj"]
atlas = ExtResource("7_lnfan")
region = Rect2(192, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfelt"]
atlas = ExtResource("7_lnfan")
region = Rect2(96, 64, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_1g4x3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ornx7")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjlbh")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbrxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xo8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfyss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ngjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qilgh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fshgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qosj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjlbh")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ngjr")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfelt")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_51f1i"]
size = Vector2(61, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytlpd"]
atlas = ExtResource("4_7p5im")
region = Rect2(0, 0, 20, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_v0pin"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytlpd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAgAAgAAAAIAPz/AAAgAAgAAAAQAAAAAAAgAAgAAAAIAAQAAAAgAAgAAAAYAAQAAAAgAAgAAAAQAAgAAAAgAAgAAAAIAAwAAAAgAAgAAAAAAAgAAAAgAAgAAAD4/wQAAAAgAAgAAAAAABAAAAAgAAgAAAD4/wwAAAAgAAgAAAAIABQAAAAgAAgAAAAQABAAAAAgAAgAAAAYAAwAAAAgAAgAAAAgAAgAAAAgAAgAAADw/wgAAAAgAAgAAAAAABgAAAAgAAgAAAD4/xQAAAAgAAgAAADw/xAAAAAgAAgAAADo/wwAAAAgAAgAAAD4/xwAAAAgAAgAAADw/xgAAAAgAAgAAADo/xQAAAAgAAgAAADg/xAAAAAgAAgAAADY/xQAAAAgAAgAAADg/xgAAAAgAAgAAADo/xwAAAAgAAgAAADw/yAAAAAgAAgAAADo/yQAAAAgAAgAAADg/yAAAAAgAAgAAADY/xwAAAAgAAgAAADQ/xgAAAAgAAgAAADI/xwAAAAgAAgAAADQ/yAAAAAgAAgAAADY/yQAAAAgAAgAAADg/ygAAAAgAAgAAADA/xgAAAAgAAgAAADI/xQAAAAgAAgAAADQ/xAAAAAgAAgAAADY/wwAAAAgAAgAAADg/wgAAAAgAAgAAADo/wQAAAAgAAgAAADw/wAAAAAgAAgAAADo//z/AAAgAAgAAAD4//z/AAAgAAgAAADg/wAAAAAgAAgAAADY/wQAAAAgAAgAAADw//j/AAAgAAgAAAD4//T/AAAgAAgAAAAAAPj/AAAgAAgAAADQ/wgAAAAgAAgAAADI/wwAAAAgAAgAAADA/xAAAAAgAAgAAAC4/xQAAAAgAAgAAACw/xAAAAAgAAgAAAC4/wwAAAAgAAgAAADA/wgAAAAgAAgAAADI/wQAAAAgAAgAAADQ/wAAAAAgAAgAAADY//z/AAAgAAgAAADg//j/AAAgAAgAAADo//T/AAAgAAgAAADw//D/AAAgAAgAAADo/+z/AAAgAAgAAADg//D/AAAgAAgAAADY//T/AAAgAAgAAADQ//j/AAAgAAgAAADI//z/AAAgAAgAAADA/wAAAAAgAAgAAAC4/wQAAAAgAAgAAACw/wgAAAAgAAgAAACo/wwAAAAgAAgAAACg/wgAAAAgAAgAAACo/wQAAAAgAAgAAACw/wAAAAAgAAgAAAC4//z/AAAgAAgAAADA//j/AAAgAAgAAADI//T/AAAgAAgAAADQ//D/AAAgAAgAAADY/+z/AAAgAAgAAADg/+j/AAAgAAgAAACY/wQAAAAgAAgAAACg/wAAAAAgAAgAAACo//z/AAAgAAgAAACw//j/AAAgAAgAAAC4//T/AAAgAAgAAADA//D/AAAgAAgAAADI/+z/AAAgAAgAAADQ/+j/AAAgAAgAAADY/+T/AAAgAAgAAADQ/+D/AAAgAAgAAADI/+T/AAAgAAgAAADA/+j/AAAgAAgAAAC4/+z/AAAgAAgAAACw//D/AAAgAAgAAACo//T/AAAgAAgAAACg//j/AAAgAAgAAACY//z/AAAgAAgAAACQ/wAAAAAgAAgAAAAoAAwAAAAgAAgAAAAgABAAAAAgAAgAAAAYABQAAAAgAAgAAAAQABgAAAAgAAgAAAAIABwAAAAgAAgAAAAAACAAAAAgAAgAAAD4/yQAAAAgAAgAAADw/ygAAAAgAAgAAADo/ywAAAAgAAgAAAAwABAAAAAgAAgAAAAoABQAAAAgAAgAAAAgABgAAAAgAAgAAAAYABwAAAAgAAgAAAAQACAAAAAgAAgAAAAIACQAAAAgAAgAAAAAACgAAAAgAAgAAAD4/ywAAAAgAAgAAADw/zAAAAAgAAgAAAAYAPz/AAAgAAgAAAAQAPj/AAAgAAgAAAAgAAAAAAAgAAgAAAAIAPT/AAAgAAgAAAAAAPD/AAAgAAgAAAD4/+z/AAAgAAgAAADw/+j/AAAgAAgAAADo/+T/AAAgAAgAAADg/+D/AAAgAAgAAADY/9z/AAAgAAgAAADg/9j/AAAgAAgAAADo/9z/AAAgAAgAAADw/+D/AAAgAAgAAAD4/+T/AAAgAAgAAAAAAOj/AAAgAAgAAAAIAOz/AAAgAAgAAAAQAPD/AAAgAAgAAAAYAPT/AAAgAAgAAAAgAPj/AAAgAAgAAAAoAPz/AAAgAAgAAAAwAAAAAAAgAAgAAAAoAAQAAAAgAAgAAAAwAAgAAAAgAAgAAAA4AAQAAAAgAAgAAABAAAgAAAAgAAgAAAA4AAwAAAAgAAgAAABIAAQAAAAgAAgAAABAAAAAAAAgAAgAAAA4APz/AAAgAAgAAAAwAPj/AAAgAAgAAAAoAPT/AAAgAAgAAAAgAPD/AAAgAAgAAAAYAOz/AAAgAAgAAAAQAOj/AAAgAAgAAAAIAOT/AAAgAAgAAAAAAOD/AAAgAAgAAAD4/9z/AAAgAAgAAADw/9j/AAAgAAgAAADo/9T/AAAgAAgAAABQAAAAAAAgAAgAAABIAPz/AAAgAAgAAABAAPj/AAAgAAgAAAA4APT/AAAgAAgAAAAwAPD/AAAgAAgAAAAoAOz/AAAgAAgAAAAgAOj/AAAgAAgAAAAYAOT/AAAgAAgAAAAQAOD/AAAgAAgAAAAIANz/AAAgAAgAAAAAANj/AAAgAAgAAAD4/9T/AAAgAAgAAADw/9D/AAAgAAgAAABYAPz/AAAgAAgAAABQAPj/AAAgAAgAAABIAPT/AAAgAAgAAABAAPD/AAAgAAgAAAA4AOz/AAAgAAgAAAAwAOj/AAAgAAgAAAAoAOT/AAAgAAgAAAAgAOD/AAAgAAgAAAAYANz/AAAgAAgAAAAQANj/AAAgAAgAAAAIANT/AAAgAAgAAAAAAND/AAAgAAgAAAD4/8z/AAAgAAgAAAAAAMj/AAAgAAgAAAAIAMz/AAAgAAgAAAAQAND/AAAgAAgAAAAYANT/AAAgAAgAAAAgANj/AAAgAAgAAAAoANz/AAAgAAgAAAAwAOD/AAAgAAgAAAA4AOT/AAAgAAgAAABAAOj/AAAgAAgAAABIAOz/AAAgAAgAAABQAPD/AAAgAAgAAABYAPT/AAAgAAgAAABgAPj/AAAgAAgAAAA=")
tile_set = SubResource("TileSet_lrajl")

[node name="Player" type="CharacterBody2D" parent="."]
z_index = 5
position = Vector2(-8.78162, -87.2666)
script = ExtResource("2_7ve8a")

[node name="TextureRect" type="TextureRect" parent="Player"]
visible = false
z_index = -10
offset_left = -1049.0
offset_top = -554.0
offset_right = 951.0
offset_bottom = 1446.0
texture = ExtResource("3_y1a8n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
scale = Vector2(10, 10)
shape = SubResource("CapsuleShape2D_y4bc0")

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2, 2)

[node name="CanvasLayer" type="CanvasLayer" parent="Player/Camera2D"]
visible = false

[node name="Panel" type="Panel" parent="Player/Camera2D/CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -288.0
offset_top = -90.0
offset_right = 288.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="Player/Camera2D/CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -11.5
offset_right = 79.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "This is dialogue text."
label_settings = SubResource("LabelSettings_1g4x3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoordLabel" type="Label" parent="Player"]
visible = false
z_index = 3
offset_right = 40.0
offset_bottom = 23.0
text = "asd"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Player"]
z_index = 2
sprite_frames = SubResource("SpriteFrames_51f1i")
animation = &"runDown"

[node name="Boat" type="CharacterBody2D" parent="."]
position = Vector2(-55.6328, -84.3384)
script = ExtResource("6_7p5im")

[node name="Boat" type="Sprite2D" parent="Boat"]
position = Vector2(-3, 2)
texture = SubResource("AtlasTexture_y4bc0")

[node name="BoatAnimated" type="AnimatedSprite2D" parent="Boat"]
visible = false
z_index = 50
sprite_frames = SubResource("SpriteFrames_1g4x3")
animation = &"down"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Boat"]
polygon = PackedVector2Array(21, 0, -2, -12, -28, -13, -23, 8, 0, 21, 23, 7)

[node name="Area2D" type="Area2D" parent="Boat"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boat/Area2D"]
position = Vector2(-1.5, 0.5)
shape = SubResource("RectangleShape2D_51f1i")

[node name="Camera2D" type="Camera2D" parent="Boat"]
enabled = false
zoom = Vector2(1.3, 1.3)

[node name="BoatGuy" type="AnimatedSprite2D" parent="Boat"]
visible = false
z_index = 100
sprite_frames = SubResource("SpriteFrames_v0pin")

[connection signal="body_entered" from="Boat/Area2D" to="Boat" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Boat/Area2D" to="Boat" method="_on_area_2d_body_exited"]
